--- a/src/origin/manifest.json
+++ b/src/origin/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "github-bugspots",
+  "name": "github-bugspots-extension",
   "version": "1.0",
   "description": "Display bugspots in GitHub.",
   "permissions": [
@@ -17,10 +17,10 @@
     "default_popup": "popup.html",
     "default_title": "github-bugspots",
     "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "images/logo16.png",
+      "32": "images/logo32.png",
+      "48": "images/logo48.png",
+      "128": "images/logo128.png"
     }
   },
   "content_scripts": [
@@ -33,9 +33,9 @@
     }
   ],
   "icons": {
-    "16": "images/get_started16.png",
-    "32": "images/get_started32.png",
-    "48": "images/get_started48.png",
-    "128": "images/get_started128.png"
+    "16": "images/logo16.png",
+    "32": "images/logo32.png",
+    "48": "images/logo48.png",
+    "128": "images/logo128.png"
   }
 }
