--- a/src/origin/manifest.json
+++ b/src/origin/manifest.json
@@ -6,7 +6,8 @@
   "permissions": [
     "activeTab",
     "declarativeContent",
-    "storage"
+    "storage",
+    "tabs"
   ],
   "background": {
     "scripts": ["background.js"],
