--- a/src/origin/manifest.json
+++ b/src/origin/manifest.json
@@ -6,8 +6,7 @@
   "permissions": [
     "activeTab",
     "declarativeContent",
-    "storage",
-    "tabs"
+    "storage"
   ],
   "background": {
     "scripts": ["background.js"],
