--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "build": "webpack"
   },
   "dependencies": {
-    "github-bugspots": "1.1.1",
+    "github-bugspots": "^1.1.2",
     "lodash": "4.17.11"
   },
   "devDependencies": {
-    "babel-core": "6.26.3",
+    "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.2.0",
     "babel-loader": "8.0.4",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
     "clean-webpack-plugin": "1.0.0",
     "copy-webpack-plugin": "4.6.0",
     "webpack": "4.27.1",
