--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clean-webpack-plugin": "1.0.0",
     "copy-webpack-plugin": "4.6.0",
     "webpack": "4.27.1",
-    "webpack-cli": "3.1.2"
+    "webpack-cli": "3.1.2",
+    "zip-webpack-plugin": "^3.0.0"
   }
 }
