--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-bugspots-extension",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "repository": "https://github.com/aha-oretama/github-bugspots-extension.git",
   "author": "aha-oretama",
@@ -17,6 +17,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "8.0.4",
+    "chrome-webstore-manager": "^0.4.1",
     "clean-webpack-plugin": "1.0.0",
     "copy-webpack-plugin": "4.6.0",
     "webpack": "4.27.1",
