--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "aha-oretama",
   "license": "MIT",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "test": "mocha --require @babel/register"
   },
   "dependencies": {
     "github-bugspots": "^1.1.2",
@@ -16,10 +17,13 @@
     "@babel/core": "^7.2.2",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
+    "@babel/register": "^7.0.0",
     "babel-loader": "8.0.4",
     "chrome-webstore-manager": "^0.4.1",
     "clean-webpack-plugin": "1.0.0",
     "copy-webpack-plugin": "4.6.0",
+    "mocha": "^5.2.0",
+    "puppeteer": "^1.11.0",
     "webpack": "4.27.1",
     "webpack-cli": "3.1.2",
     "zip-webpack-plugin": "^3.0.0"
