--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
     - persist_to_workspace:
         root: .
         paths:
-          - dist/*
+        - output/*
 
   release:
     docker:
@@ -48,24 +48,24 @@ jobs:
     - checkout
 
     - attach_workspace:
-        at: dist
+        at: output
 
     - run: npm install
     - run:
         command: |
           token="$(npx chrome-webstore-manager refresh_token --client_id ${CLIENT_ID} --client_secret ${CLIENT_SECRET} --refresh_token ${REFRESH_TOKEN})"
           echo 'export WEBSTORE_TOKEN="${token}"' >> $BASH_ENV
-          npx chrome-webstore-manager update gcgnjkmkkdllmfeeggghobokcnnfmjgg ./dist/github-bugspots-extension.zip
+          npx chrome-webstore-manager update gcgnjkmkkdllmfeeggghobokcnnfmjgg ./output/github-bugspots-extension.zip
           npx chrome-webstore-manager publish gcgnjkmkkdllmfeeggghobokcnnfmjgg
 
 workflows:
   version: 2
   build:
     jobs:
-      - build
-      - release:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
+    - build
+    - release:
+        requires:
+        - build
+        filters:
+          branches:
+            only: master
