--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "test": "mocha --require @babel/register"
+    "test": "mocha"
   },
   "dependencies": {
     "github-bugspots": "^1.1.2",
