--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,14 @@ addons:
     packages:
     # This is required to run new chrome on old trusty
     - libnss3
-notifications:
-  email: false
-cache:
-  directories:
-  - node_modules
-# allow headful tests
-before_install:
-# Enable user namespace cloning
-- "sysctl kernel.unprivileged_userns_clone=1"
+cache: npm
+install:
+- npm install
+before_script:
 # Launch XVFB
 - "export DISPLAY=:99.0"
 - "sh -e /etc/init.d/xvfb start"
 - sleep 3 # give xvfb some time to start
-install:
-- npm install
 script:
 - npm run build
 - npm run test
@@ -27,7 +20,7 @@ deploy:
   provider: script
   script:
   - token="$(npx chrome-webstore-manager refresh_token --client_id ${CLIENT_ID} --client_secret ${CLIENT_SECRET} --refresh_token ${REFRESH_TOKEN})"
-  - echo 'export WEBSTORE_TOKEN="${token}"' >> $BASH_ENV
+  - export WEBSTORE_TOKEN="${token}"
   - npx chrome-webstore-manager update gcgnjkmkkdllmfeeggghobokcnnfmjgg ./output/github-bugspots-extension.zip
   - npx chrome-webstore-manager publish gcgnjkmkkdllmfeeggghobokcnnfmjgg
   on:
