--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,7 @@ script:
 - npm run test
 deploy:
   provider: script
-  script:
-  - token="$(npx chrome-webstore-manager refresh_token --client_id ${CLIENT_ID} --client_secret ${CLIENT_SECRET} --refresh_token ${REFRESH_TOKEN})"
-  - export WEBSTORE_TOKEN="${token}"
-  - npx chrome-webstore-manager update gcgnjkmkkdllmfeeggghobokcnnfmjgg ./output/github-bugspots-extension.zip
-  - npx chrome-webstore-manager publish gcgnjkmkkdllmfeeggghobokcnnfmjgg
+  script: bash publish.sh
   on:
     branch: master
 
