--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "aha-oretama",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
+    "dev": "webpack --config webpack.development.config.js && webpack-dev-server --config webpack.development.config.js --open",
+    "build": "webpack --config webpack.production.config.js",
     "test": "mocha"
   },
   "dependencies": {
@@ -32,6 +33,7 @@
     "puppeteer": "^1.11.0",
     "webpack": "4.27.1",
     "webpack-cli": "3.1.2",
+    "webpack-dev-server": "^3.1.14",
     "zip-webpack-plugin": "^3.0.0"
   }
 }
